--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@
     border-style: border-box;
 }
 
+body {
+    color: #8A8A8A;
+    font-family: 'Montserrat', sans-serif;
+}
+
 /* contenitore generico */
 .contenitore {
     margin: auto;
@@ -12,11 +17,22 @@
 }
 
 /* header  */
+#img-logo {
+    height: 75px;
+}
 
-header {
-    background-color: #e579e6;
-    min-height: 100px;
-    margin-bottom: 30px;
+ul {
+    margin: 40px 0;
+}
+
+li {
+    display: inline-block;
+    margin-right: 5px;
+}
+
+a {
+    text-decoration: none;
+    color: #8A8A8A;
 }
 
 /* prima section  */
