--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,26 @@
 * {
     margin: 0px;
     padding: 0px;
-    border-style: border-box;
+    box-sizing: border-box;
 }
 
+/* caratteristiche generali  */
 body {
     color: #8A8A8A;
     font-family: 'Montserrat', sans-serif;
 }
 
-/* contenitore generico */
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: block;
+}
+
+.rounded-corner {
+    border-radius: 10px;
+}
+
+/* contenitore principale */
 .contenitore {
     margin: auto;
     max-width: 1100px;
@@ -37,8 +48,15 @@ a {
 
 /* prima section  */
 .hero {
-    min-height: 500px;
-    background-color: #e1d67a;
+    background-image: url(../img/banner.jpg);
+    background-position: center;
+    min-height: 450px;
+    padding: 290px 500px 0px 40px;
+    color: white;
+}
+
+h2 {
+    font-weight: normal;
 }
 
 /* seconda section  */
@@ -53,12 +71,6 @@ a {
     min-height: 90px;
     margin-bottom: 30px;
     background-color: #abcfe7;
-}
-
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: block;
 }
 
 .col {
