--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@ body {
     border-radius: 10px;
 }
 
+.margin-bottom {
+    margin-bottom: 30px;
+}
+
 /* contenitore principale */
 .contenitore {
     margin: auto;
@@ -30,10 +34,6 @@ body {
 /* header  */
 #img-logo {
     height: 75px;
-}
-
-ul {
-    margin: 40px 0;
 }
 
 li {
@@ -55,29 +55,29 @@ a {
     color: white;
 }
 
-h2 {
+h2, h3{
     font-weight: normal;
 }
 
 /* seconda section  */
-.leadership {
-    min-height: 650px;
-    margin: 30px 0;
-    background-color: blue;
+
+h1 {
+    color: black;
+    font-size: 37px;
 }
 
 /* div floattanti  */
-.cont-top {
-    min-height: 90px;
-    margin-bottom: 30px;
-    background-color: #abcfe7;
-}
 
 .col {
 float: left;
 width: 20%;
-min-height: 500px;
-background-color: #abcfe7;
+}
+
+.img-col {
+    width: 100%;
+    height: 190px;
+    object-fit: cover;
+    margin-bottom: 10px;
 }
 
 .col-middle {
@@ -85,6 +85,10 @@ background-color: #abcfe7;
     margin: auto 30px;
 }
 
+h3 {
+    color: black;
+    margin-bottom: 5px;
+}
 /* footer  */
 footer {
     min-height: 45px;
