--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,15 @@
-/* reset */
+/* 
+reset 
+*/
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
 
-/* caratteristiche generali  */
+/* 
+caratteristiche generali  
+*/
 body {
     color: #8A8A8A;
     font-family: 'Montserrat', sans-serif;
@@ -17,21 +21,42 @@ body {
     display: block;
 }
 
-.rounded-corner {
+.radius {
     border-radius: 10px;
 }
 
-.margin-bottom {
+.mar-bot {
     margin-bottom: 30px;
 }
 
-/* contenitore principale */
+/* 
+titoli 
+*/
+h2, h3{
+    font-weight: normal;
+}
+
+h1 {
+    color: black;
+    font-size: 37px;
+}
+
+h3 {
+    color: black;
+    margin-bottom: 5px;
+}
+
+/* 
+contenitore principale 
+*/
 .contenitore {
     margin: auto;
     max-width: 1100px;
 }
 
-/* header  */
+/* 
+header  
+*/
 #img-logo {
     height: 75px;
 }
@@ -46,7 +71,9 @@ a {
     color: #8A8A8A;
 }
 
-/* prima section  */
+/* 
+prima section  
+*/
 .hero {
     background-image: url(../img/banner.jpg);
     background-position: center;
@@ -55,29 +82,25 @@ a {
     color: white;
 }
 
-h2, h3{
-    font-weight: normal;
-}
-
-/* seconda section  */
-
-h1 {
-    color: black;
-    font-size: 37px;
-}
-
-/* div floattanti  */
-
+/* 
+seconda section  
+*/
 .col {
 float: left;
 width: 20%;
 }
 
+/* .cont-img {
+    background-color: black;
+    margin-bottom: 10px;
+    height: 190px;
+} */
+
 .img-col {
     width: 100%;
     height: 190px;
     object-fit: cover;
-    margin-bottom: 10px;
+    /* opacity: 0.8; */
 }
 
 .col-middle {
@@ -85,12 +108,14 @@ width: 20%;
     margin: auto 30px;
 }
 
-h3 {
-    color: black;
-    margin-bottom: 5px;
-}
-/* footer  */
+/* 
+footer 
+*/
 footer {
-    min-height: 45px;
-    background-color: #8801fe;
+    text-align: center;
+    color: black;
+}
+
+.heart {
+    color: red;
 }
